--- a/me.html
+++ b/me.html
@@ -6,10 +6,10 @@
     <title>LOOPER</title>
 </head> <link rel="stylesheet" href="style.css">
 <body>
-    <h1> 0</h1>
-
-    <button="bottone">mi piace +1</button>
-       <button="bottone">non mi piace -1</button>
+    <div id="voto" class="verde"><h1>0</h1></div>
+    <button onclick="aggiornaVoto(1)">Mi piace (+1)</button>
+    <button onclick="aggiornaVoto(-1)">Non mi piace (-1)</button>
     <script src="script.js"></script>
+    </div>
 </body>
 </html>
