seconda ora punto 4

--- a/me.html
+++ b/me.html
@@ -11,5 +11,8 @@
     <button onclick="aggiornaVoto(-1)">Non mi piace (-1)</button>
     <script src="script.js"></script>
     </div>
+    <h2>Voto attuale <div id="numero-voto">0</div></h2>
+    <div id="contenitore stelle"></div>
+    <div id="bottoni"></div>
 </body>
 </html>
