seconda ora punto 2

--- a/me.html
+++ b/me.html
@@ -12,7 +12,7 @@
     <script src="script.js"></script>
     </div>
     <h2>Voto attuale <div id="numero-voto">0</div></h2>
-    <div id="contenitore stelle"></div>
+    <div id=" stelle"></div>
     <div id="bottoni"></div>
 </body>
 </html>
